--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -9,6 +9,7 @@
    - water-gkhs-network
    - water-gkhs-users
    - { role: "azavea.papertrail", tags: papertrail }
+   - { role: water-gkhs-web-errors, tags: nginx }
 
 - hosts: archipelago_cenote
   become: yes
@@ -20,7 +21,6 @@
   become: yes
   roles:
     - { role: water-gkhs-nginx, tags: nginx }
-    - { role: water-gkhs-nginx-errors, tags: nginx }
 
 - hosts: archipelago.water.gkhs.net
   become: yes
@@ -48,7 +48,6 @@
     - plex
     - millpond-filebot
     - retort
-    - water-gkhs-nginx-errors
 
 - hosts: millpond.water.gkhs.net
   become: yes
