--- a/ansible/roles/aws-aqcom-dns/tasks/foipme.yml
+++ b/ansible/roles/aws-aqcom-dns/tasks/foipme.yml
@@ -34,6 +34,26 @@
 #      ttl: "900"
 #      value: 'ns-1164.awsdns-17.org. awsdns-hostmaster.amazon.com. 1 7200 900 1209600 86400'
 
+- name: strangelrp.foip.me. - A
+  route53:
+      overwrite: true
+      command: "create"
+      zone: "foip.me"
+      record: "strangelrp.foip.me."
+      type: "A"
+      ttl: "300"
+      value: '109.74.192.161'
+
+
+- name: wakingnightmare.foip.me. - A
+  route53:
+      overwrite: true
+      command: "create"
+      zone: "foip.me"
+      record: "wakingnightmare.foip.me."
+      type: "A"
+      ttl: "300"
+      value: '109.74.192.161'
 
 
 - name: fourrivers.foip.me. - A
