--- a/ansible/roles/archipelago-users/tasks/main.yml
+++ b/ansible/roles/archipelago-users/tasks/main.yml
@@ -1,9 +1,17 @@
 ---
 
-- name: Create normal users
-  user: name={{ item }}
+#- name: Create normal users
+#  user: name={{ item }}
+#  with_items:
+#   - arkserver
+
+- name: Delete normal users
+  user:
+    name: "{{ item }}"
+    state: absent
+    remove: yes
   with_items:
    - arkserver
 
-- name: Add Aquarion key to arkserver
-  authorized_key: user=arkserver key=https://github.com/aquarion.keys
+#- name: Add Aquarion key to arkserver
+#  authorized_key: user=arkserver key=https://github.com/aquarion.keys
