fix and rename plex mount point tasks

--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -45,7 +45,8 @@
   become: yes
   roles:
     - millpond-packages
-    - plex
+    - millpond-mount-media
+    - plexupdate
     - millpond-filebot
     - retort
 
