--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -1,4 +1,4 @@
 [defaults]
 inventory = ./inventory
 roles_path = galaxy-roles
-vault_password_file = /home/aquarion/.vault_pass.txt
+vault_password_file = ~/.vault_pass.txt
