--- a/ansible/roles/aws-aqcom-dns/tasks/foipme.yml
+++ b/ansible/roles/aws-aqcom-dns/tasks/foipme.yml
@@ -66,6 +66,16 @@
       ttl: "300"
       value: '109.74.192.161'
 
+- name: forgotten.foip.me. - A
+  route53:
+      overwrite: true
+      command: "create"
+      zone: "foip.me"
+      record: "forgotten.foip.me."
+      type: "A"
+      ttl: "300"
+      value: '109.74.192.161'
+
 
 - name: diaspora.foip.me. - A
   route53:
