--- a/ansible/roles/archipelago-nginx/tasks/main.yml
+++ b/ansible/roles/archipelago-nginx/tasks/main.yml
@@ -36,5 +36,6 @@
     - omnyom.com
     - factionfiction.net
     - warehousebasement.com
+    - clockworkcircus.zone
   notify:
    - restart nginx
