Strip www from skute

--- a/ansible/roles/archipelago-nginx/tasks/main.yml
+++ b/ansible/roles/archipelago-nginx/tasks/main.yml
@@ -36,6 +36,7 @@
     - omnyom.com
     - factionfiction.net
     - warehousebasement.com
+    - skute.me
     - clockworkcircus.zone
   notify:
    - restart nginx
