--- a/ansible/roles/aws-aqcom-dns/tasks/foipme.yml
+++ b/ansible/roles/aws-aqcom-dns/tasks/foipme.yml
@@ -76,6 +76,25 @@
       ttl: "300"
       value: '109.74.192.161'
 
+- name: ojaqs.foip.me. - A
+  route53:
+      overwrite: true
+      command: "create"
+      zone: "foip.me"
+      record: "ojaqs.foip.me."
+      type: "A"
+      ttl: "300"
+      value: '{{ ansible_default_ipv4.address }}'
+
+- name: bless.ojaqs.foip.me. - A
+  route53:
+      overwrite: true
+      command: "create"
+      zone: "foip.me"
+      record: "bless.ojaqs.foip.me."
+      type: "A"
+      ttl: "300"
+      value: '{{ ansible_default_ipv4.address }}'
 
 - name: diaspora.foip.me. - A
   route53:
