Fix certbot issues, add ludoistic

--- a/ansible/roles/archipelago-nginx/tasks/main.yml
+++ b/ansible/roles/archipelago-nginx/tasks/main.yml
@@ -33,6 +33,7 @@
     - aquarionics.com
     - cleartextcontent.co.uk
     remove_www:
+    - ludoistic.com
     - omnyom.com
     - factionfiction.net
     - warehousebasement.com
