--- a/ansible/roles/water-gkhs-packages/tasks/main.yml
+++ b/ansible/roles/water-gkhs-packages/tasks/main.yml
@@ -1,5 +1,9 @@
 ---
 
+- name: Install key
+  apt_key:
+    keyserver: keyring.debian.org
+    id: 8B48AD6246925553
 
 - name: Package list update
   apt: update_cache=yes cache_valid_time=21600
@@ -38,5 +42,14 @@
       - apticron
       - moreutils
       - rzip
-      
 
+- apt_repository:
+    repo: deb http://ftp.debian.org/debian stretch-backports main
+    state: present
+    filename: 'stretch-backports'
+
+- name: Install backported packages
+  apt: pkg={{ item }} state=installed default_release=stretch-backports
+  with_items:
+    - certbot
+    
