--- a/ansible/roles/millpond-filebot/handlers/main.yml
+++ b/ansible/roles/millpond-filebot/handlers/main.yml
@@ -1,3 +1,7 @@
 ---
 - name: sysctl
   command: "sysctl -p"
+
+
+- name: register filebot
+  command: "filebot --license {{ plex_home }}/.filebot_license.psm"
