--- a/ansible/roles/millpond-filebot/tasks/filebot.yml
+++ b/ansible/roles/millpond-filebot/tasks/filebot.yml
@@ -1,16 +1,41 @@
 
 # Based on https://github.com/cmprescott/ansible-role-filebot
 
-- name: "Setup |  deb | check for installation"
-  stat: path="{{ filebot_deb_bin }}"
-  register: filebot_bin
+
+- name: "Check Filebot Version"
+  lineinfile:
+    path: "{{ plex_home }}/.ansible_filebot_reg"
+    regexp: '^etag'
+    line: 'etag {{ filebot_version }}'
+    owner: plex
+    group: plex
+    mode: 0644
+    create: yes
+  register: FilebotUpdate
+  tags:
+    - "filebot"
 
 - name: "Setup |  deb | download installer"
   get_url: url="{{ filebot_deb_url }}" dest="{{ filebot_deb_tmp }}"
-  when: not filebot_bin.stat.exists
+  when: FilebotUpdate.changed
+  tags:
+    - "filebot"
 
 - name: "Setup |  deb | run the installer"
   become: Yes
   apt: deb="{{ filebot_deb_tmp }}"
-  when: not filebot_bin.stat.exists
+  when: FilebotUpdate.changed
+  tags:
+    - "filebot"
 
+- name: register licence
+  copy:
+    src: Filebot_Licence.psm
+    dest: "{{ plex_home }}/.filebot_license.psm"
+    owner: plex
+    group: plex
+    mode: 0644
+  notify:
+    - "register filebot"
+  tags:
+    - "filebot"
