--- a/ansible/roles/aws-aqcom-dns/tasks/camlarp.yml
+++ b/ansible/roles/aws-aqcom-dns/tasks/camlarp.yml
@@ -32,6 +32,16 @@
 #      ttl: "900"
 #      value: 'ns-422.awsdns-52.com. awsdns-hostmaster.amazon.com. 1 7200 900 1209600 86400'
 
+- name: citadel.camlarp.co.uk. - A
+  route53:
+      overwrite: true
+      command: "create"
+      zone: "camlarp.co.uk"
+      record: "citadel.camlarp.co.uk."
+      type: "A"
+      ttl: "300"
+      value: '109.74.192.161'
+
 
 
 - name: bw.camlarp.co.uk. - A
