--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -75,9 +75,9 @@
       transmission_rpc_whitelist_enabled: true
       transmission_umask: "002"
       transmission_rpc_whitelist: "127.0.0.1,192.168.100.*"
-      transmission_incomplete_dir: /var/lib/plexmediaserver/Torrential/Progress
+      transmission_incomplete_dir: {{ plex_home }}/Torrential/Progress
       transmission_incomplete_dir_enabled: true
-      transmission_download_dir: /var/lib/plexmediaserver/Torrential/Completed
+      transmission_download_dir: {{ plex_home }}/Torrential/Completed
     - role: millpond-flexget
   tasks:
    # Clear up Transmission permissions
