--- a/ansible/roles/aws-aqcom-dns/tasks/foipme.yml
+++ b/ansible/roles/aws-aqcom-dns/tasks/foipme.yml
@@ -116,6 +116,15 @@
       ttl: "300"
       value: '{{ ansible_default_ipv4.address }}'
 
+- name: sevenmirrors.foip.me. - A
+  route53:
+      overwrite: true
+      command: "create"
+      zone: "foip.me"
+      record: "sevenmirrors.foip.me."
+      type: "A"
+      ttl: "300"
+      value: '{{ ansible_default_ipv4.address }}'
 
 
 - name: idlespeculation.foip.me. - A
