--- a/ansible/roles/aws-aqcom-dns/tasks/aquarionics.yml
+++ b/ansible/roles/aws-aqcom-dns/tasks/aquarionics.yml
@@ -6,6 +6,8 @@
       command: "create"
       zone: "aquarionics.com"
       record: "aquarionics.com."
+      aws_access_key: '{{aqcom_aws_key}}'
+      aws_secret_key: '{{aqcom_aws_secret}}'
       type: "A"
       ttl: "86400"
       value: '{{ ansible_default_ipv4.address }}'
@@ -16,6 +18,8 @@
       command: "create"
       zone: "aquarionics.com"
       record: "aquarionics.com."
+      aws_access_key: '{{aqcom_aws_key}}'
+      aws_secret_key: '{{aqcom_aws_secret}}'
       type: "AAAA"
       ttl: "300"
       value: '{{ ansible_default_ipv6.address }}'
@@ -26,6 +30,8 @@
       command: "create"
       zone: "aquarionics.com"
       record: "aquarionics.com."
+      aws_access_key: '{{aqcom_aws_key}}'
+      aws_secret_key: '{{aqcom_aws_secret}}'
       type: "MX"
       ttl: "300"
       value: "10 ASPMX.L.GOOGLE.COM.,10 ALT1.ASPMX.L.GOOGLE.COM.,20 ALT2.ASPMX.L.GOOGLE.COM.,20 ASPMX2.GOOGLEMAIL.COM.,30 ASPMX3.GOOGLEMAIL.COM."
@@ -36,6 +42,8 @@
       command: "create"
       zone: "aquarionics.com"
       record: "aquarionics.com."
+      aws_access_key: '{{aqcom_aws_key}}'
+      aws_secret_key: '{{aqcom_aws_secret}}'
       type: "NS"
       ttl: "172800"
       value: ns-1103.awsdns-09.org.,ns-1667.awsdns-16.co.uk.,ns-275.awsdns-34.com.,ns-1004.awsdns-61.net.
@@ -48,7 +56,9 @@
 #      command: "create"
 #      zone: "aquarionics.com"
 #      record: "aquarionics.com."
-#      type: "SOA"
+#      aws_access_key: '{{aqcom_aws_key}}'
+      aws_secret_key: '{{aqcom_aws_secret}}'
+      # type: "SOA"
 #      ttl: "900"
 #      value: 'ns-1103.awsdns-09.org. awsdns-hostmaster.amazon.com. 1 7200 900 1209600 86400'
 
@@ -60,6 +70,8 @@
       command: "create"
       zone: "aquarionics.com"
       record: "aquarionics.com."
+      aws_access_key: '{{aqcom_aws_key}}'
+      aws_secret_key: '{{aqcom_aws_secret}}'
       type: "SPF"
       ttl: "86400"
       value: '"v=spf1 include:aspmx.googlemail.com ~all"'
@@ -72,6 +84,8 @@
       command: "create"
       zone: "aquarionics.com"
       record: "aquarionics.com."
+      aws_access_key: '{{aqcom_aws_key}}'
+      aws_secret_key: '{{aqcom_aws_secret}}'
       type: "TXT"
       ttl: "300"
       value: '"v=spf1 include:aspmx.googlemail.com ~all"'
@@ -84,9 +98,23 @@
       command: "create"
       zone: "aquarionics.com"
       record: "google._domainkey.aquarionics.com."
+      aws_access_key: '{{aqcom_aws_key}}'
+      aws_secret_key: '{{aqcom_aws_secret}}'
       type: "TXT"
       ttl: "300"
       value: '"v=DKIM1; k=rsa; p=MIGfMA0GCSqGSIb3DQEBAQUAA4GNADCBiQKBgQCeXipYp/HVbmCmGSDI5WKA6vB2679OoStEVKXePsMD0WfEOK+BqQv1lHBzjL2AlNvGmMPf2Ccd6cnk0HdsaQqpkbS1TyOWuZx7P191Q1bHhT5mxvZoAdYbv5XN+0j/SWsqhg/2zYmCQhB8ed499sX5esIUWYQK4djh+xV7GaYxCwIDAQAB"'
+
+- name: stream.aquarionics.com. - CNAME
+  route53:
+      overwrite: true
+      command: "create"
+      zone: "aquarionics.com"
+      record: "stream.aquarionics.com."
+      aws_access_key: '{{aqcom_aws_key}}'
+      aws_secret_key: '{{aqcom_aws_secret}}'
+      type: "CNAME"
+      ttl: "300"
+      value: 'www.aquarionics.com'
 
 - name: live.aquarionics.com. - CNAME
   route53:
@@ -94,6 +122,8 @@
       command: "create"
       zone: "aquarionics.com"
       record: "live.aquarionics.com."
+      aws_access_key: '{{aqcom_aws_key}}'
+      aws_secret_key: '{{aqcom_aws_secret}}'
       type: "CNAME"
       ttl: "300"
       value: 'www.aquarionics.com'
@@ -105,6 +135,8 @@
       command: "create"
       zone: "aquarionics.com"
       record: "cdn.aquarionics.com."
+      aws_access_key: '{{aqcom_aws_key}}'
+      aws_secret_key: '{{aqcom_aws_secret}}'
       type: "CNAME"
       ttl: "300"
       value: 'd2r0e8lumqw3g1.cloudfront.net'
@@ -117,6 +149,8 @@
       command: "create"
       zone: "aquarionics.com"
       record: "1.cdn.aquarionics.com."
+      aws_access_key: '{{aqcom_aws_key}}'
+      aws_secret_key: '{{aqcom_aws_secret}}'
       type: "CNAME"
       ttl: "3600"
       value: 'd2r0e8lumqw3g1.cloudfront.net'
@@ -129,6 +163,8 @@
       command: "create"
       zone: "aquarionics.com"
       record: "2.cdn.aquarionics.com."
+      aws_access_key: '{{aqcom_aws_key}}'
+      aws_secret_key: '{{aqcom_aws_secret}}'
       type: "CNAME"
       ttl: "3600"
       value: 'd2r0e8lumqw3g1.cloudfront.net'
@@ -141,6 +177,8 @@
       command: "create"
       zone: "aquarionics.com"
       record: "3.cdn.aquarionics.com."
+      aws_access_key: '{{aqcom_aws_key}}'
+      aws_secret_key: '{{aqcom_aws_secret}}'
       type: "CNAME"
       ttl: "3600"
       value: 'd2r0e8lumqw3g1.cloudfront.net'
@@ -153,6 +191,8 @@
       command: "create"
       zone: "aquarionics.com"
       record: "4.cdn.aquarionics.com."
+      aws_access_key: '{{aqcom_aws_key}}'
+      aws_secret_key: '{{aqcom_aws_secret}}'
       type: "CNAME"
       ttl: "3600"
       value: 'd2r0e8lumqw3g1.cloudfront.net'
@@ -165,6 +205,8 @@
       command: "create"
       zone: "aquarionics.com"
       record: "dailyphoto.aquarionics.com."
+      aws_access_key: '{{aqcom_aws_key}}'
+      aws_secret_key: '{{aqcom_aws_secret}}'
       type: "CNAME"
       ttl: "300"
       value: 'dc80vpukp1283.cloudfront.net'
@@ -177,6 +219,8 @@
       command: "create"
       zone: "aquarionics.com"
       record: "live.dailyphoto.aquarionics.com."
+      aws_access_key: '{{aqcom_aws_key}}'
+      aws_secret_key: '{{aqcom_aws_secret}}'
       type: "A"
       ttl: "300"
       value: '109.74.192.161'
@@ -189,6 +233,8 @@
       command: "create"
       zone: "aquarionics.com"
       record: "feeds.aquarionics.com."
+      aws_access_key: '{{aqcom_aws_key}}'
+      aws_secret_key: '{{aqcom_aws_secret}}'
       type: "CNAME"
       ttl: "3600"
       value: 'y0bpo.feedproxy.ghs.google.com'
@@ -201,6 +247,8 @@
       command: "create"
       zone: "aquarionics.com"
       record: "mail.aquarionics.com."
+      aws_access_key: '{{aqcom_aws_key}}'
+      aws_secret_key: '{{aqcom_aws_secret}}'
       type: "CNAME"
       ttl: "86400"
       value: 'ghs.google.com'
@@ -211,6 +259,8 @@
       command: "create"
       zone: "aquarionics.com"
       record: "{{ plex_domain }}."
+      aws_access_key: '{{aqcom_aws_key}}'
+      aws_secret_key: '{{aqcom_aws_secret}}'
       type: "A"
       ttl: "86400"
       value: '{{ ansible_default_ipv4.address }}'
@@ -222,6 +272,8 @@
       command: "create"
       zone: "aquarionics.com"
       record: "old.aquarionics.com."
+      aws_access_key: '{{aqcom_aws_key}}'
+      aws_secret_key: '{{aqcom_aws_secret}}'
       type: "A"
       ttl: "86400"
       value: '{{ ansible_default_ipv4.address }}'
@@ -234,6 +286,8 @@
       command: "create"
       zone: "aquarionics.com"
       record: "old.aquarionics.com."
+      aws_access_key: '{{aqcom_aws_key}}'
+      aws_secret_key: '{{aqcom_aws_secret}}'
       type: "AAAA"
       ttl: "300"
       value: '{{ ansible_default_ipv6.address }}'
@@ -246,6 +300,8 @@
       command: "create"
       zone: "aquarionics.com"
       record: "tumblr.aquarionics.com."
+      aws_access_key: '{{aqcom_aws_key}}'
+      aws_secret_key: '{{aqcom_aws_secret}}'
       type: "CNAME"
       ttl: "3600"
       value: 'domains.tumblr.com'
@@ -253,6 +309,8 @@
 
 - name: wiki.aquarionics.com. - A
   route53:
+      aws_access_key: '{{aqcom_aws_key}}'
+      aws_secret_key: '{{aqcom_aws_secret}}'
       type: "A"
       ttl: "86400"
       zone: "aquarionics.com"
@@ -268,6 +326,8 @@
       command: "delete"
       zone: "aquarionics.com"
       record: "wiki.aquarionics.com."
+      aws_access_key: '{{aqcom_aws_key}}'
+      aws_secret_key: '{{aqcom_aws_secret}}'
       type: "AAAA"
       ttl: "300"
       value: '{{ ansible_default_ipv6.address }}'
@@ -279,6 +339,8 @@
       command: "create"
       zone: "aquarionics.com"
       record: "wiki.aquarionics.com."
+      aws_access_key: '{{aqcom_aws_key}}'
+      aws_secret_key: '{{aqcom_aws_secret}}'
       type: "CNAME"
       ttl: "86400"
       value: 'aquarion.github.io'
@@ -290,6 +352,8 @@
       command: "create"
       zone: "aquarionics.com"
       record: "www.aquarionics.com."
+      aws_access_key: '{{aqcom_aws_key}}'
+      aws_secret_key: '{{aqcom_aws_secret}}'
       type: "A"
       ttl: "300"
       value: '{{ ansible_default_ipv4.address }}'
@@ -300,6 +364,8 @@
       command: "create"
       zone: "aquarionics.com"
       record: "wywo.aquarionics.com."
+      aws_access_key: '{{aqcom_aws_key}}'
+      aws_secret_key: '{{aqcom_aws_secret}}'
       type: "A"
       ttl: "300"
       value: '{{ ansible_default_ipv4.address }}'
