--- a/ansible/roles/aws-aqcom-dns/tasks/aqxs.yml
+++ b/ansible/roles/aws-aqcom-dns/tasks/aqxs.yml
@@ -6,6 +6,8 @@
       command: "create"
       zone: "aqxs.net"
       record: "aqxs.net."
+      aws_access_key: '{{aqcom_aws_key}}'
+      aws_secret_key: '{{aqcom_aws_secret}}'
       type: "A"
       ttl: "3600"
       value: '109.74.192.161'
@@ -18,9 +20,11 @@
       command: "create"
       zone: "aqxs.net"
       record: "aqxs.net."
+      aws_access_key: '{{aqcom_aws_key}}'
+      aws_secret_key: '{{aqcom_aws_secret}}'
       type: "NS"
       ttl: "172800"
-      value: ns-1408.awsdns-48.org., ns-685.awsdns-21.net., ns-40.awsdns-05.com., ns-1866.awsdns-41.co.uk.
+      value: ns-1408.awsdns-48.org.,ns-685.awsdns-21.net.,ns-40.awsdns-05.com.,ns-1866.awsdns-41.co.uk.
 
 
 
@@ -30,7 +34,9 @@
 #      command: "create"
 #      zone: "aqxs.net"
 #      record: "aqxs.net."
-#      type: "SOA"
+#      aws_access_key: '{{aqcom_aws_key}}'
+      # aws_secret_key: '{{aqcom_aws_secret}}'
+      # type: "SOA"
 #      ttl: "900"
 #      value: 'ns-1408.awsdns-48.org. awsdns-hostmaster.amazon.com. 1 7200 900 1209600 86400'
 
@@ -42,6 +48,8 @@
       command: "create"
       zone: "aqxs.net"
       record: "aqxs.net."
+      aws_access_key: '{{aqcom_aws_key}}'
+      aws_secret_key: '{{aqcom_aws_secret}}'
       type: "TXT"
       ttl: "300"
       value: '"v=spf1 a mx include:spf.mtasv.net ~all"'
@@ -54,6 +62,8 @@
       command: "create"
       zone: "aqxs.net"
       record: "aqxs.net."
+      aws_access_key: '{{aqcom_aws_key}}'
+      aws_secret_key: '{{aqcom_aws_secret}}'
       type: "TXT"
       ttl: "300"
       value: '"google-site-verification=SvTocYjKGCKTzN9BlJSdq0MVkEaFvEAum18VoLaKB5s"'
@@ -64,6 +74,8 @@
       command: "create"
       zone: "aqxs.net"
       record: "*.aqxs.net."
+      aws_access_key: '{{aqcom_aws_key}}'
+      aws_secret_key: '{{aqcom_aws_secret}}'
       type: "A"
       ttl: "3600"
       value: '109.74.192.161'
@@ -76,6 +88,8 @@
       command: "create"
       zone: "aqxs.net"
       record: "20151026232244.pm._domainkey.aqxs.net."
+      aws_access_key: '{{aqcom_aws_key}}'
+      aws_secret_key: '{{aqcom_aws_secret}}'
       type: "TXT"
       ttl: "300"
       value: '"k=rsa; p=MIGfMA0GCSqGSIb3DQEBAQUAA4GNADCBiQKBgQCGF2/JFx7pvFw7RU1wXzqtMohMaSZTEbeLscHSrvzrKKtH2M1zTY8YwIZpjFCjbCbQ2aW28bLzzhd2e1klZorwWV++CYoXnnGgVtz1241ToVPgKyKepmBn6E+3DaJZWsj17jINgEkxYoZ3hvp34y+NSFxlMR4bD9V3EetoxUAYgQIDAQAB"'
@@ -87,6 +101,8 @@
       command: "delete"
       zone: "aqxs.net"
       record: "lists.aqxs.net."
+      aws_access_key: '{{aqcom_aws_key}}'
+      aws_secret_key: '{{aqcom_aws_secret}}'
       type: "MX"
       ttl: "3600"
       value: '10 cenote.gkhs.net.aqxs.net.'
@@ -97,6 +113,8 @@
       command: "create"
       zone: "aqxs.net"
       record: "pmbounce.aqxs.net."
+      aws_access_key: '{{aqcom_aws_key}}'
+      aws_secret_key: '{{aqcom_aws_secret}}'
       type: "CNAME"
       ttl: "300"
       value: 'pm.mtasv.net'
