--- a/ansible/roles/aws-aqcom-dns/tasks/camlarp.yml
+++ b/ansible/roles/aws-aqcom-dns/tasks/camlarp.yml
@@ -6,6 +6,8 @@
       command: "create"
       zone: "camlarp.co.uk"
       record: "camlarp.co.uk."
+      aws_access_key: '{{aqcom_aws_key}}'
+      aws_secret_key: '{{aqcom_aws_secret}}'
       type: "A"
       ttl: "300"
       value: '109.74.192.161'
@@ -17,6 +19,8 @@
       command: "create"
       zone: "camlarp.co.uk"
       record: "camlarp.co.uk."
+      aws_access_key: '{{aqcom_aws_key}}'
+      aws_secret_key: '{{aqcom_aws_secret}}'
       type: "NS"
       ttl: "172800"
       value: ns-422.awsdns-52.com,ns-617.awsdns-13.net,ns-1181.awsdns-19.org,ns-1809.awsdns-34.co.uk
@@ -28,7 +32,9 @@
 #      command: "create"
 #      zone: "camlarp.co.uk"
 #      record: "camlarp.co.uk."
-#      type: "SOA"
+#      aws_access_key: '{{aqcom_aws_key}}'
+      aws_secret_key: '{{aqcom_aws_secret}}'
+      type: "SOA"
 #      ttl: "900"
 #      value: 'ns-422.awsdns-52.com. awsdns-hostmaster.amazon.com. 1 7200 900 1209600 86400'
 
@@ -38,6 +44,8 @@
       command: "create"
       zone: "camlarp.co.uk"
       record: "citadel.camlarp.co.uk."
+      aws_access_key: '{{aqcom_aws_key}}'
+      aws_secret_key: '{{aqcom_aws_secret}}'
       type: "A"
       ttl: "300"
       value: '109.74.192.161'
@@ -50,6 +58,8 @@
       command: "create"
       zone: "camlarp.co.uk"
       record: "bw.camlarp.co.uk."
+      aws_access_key: '{{aqcom_aws_key}}'
+      aws_secret_key: '{{aqcom_aws_secret}}'
       type: "A"
       ttl: "300"
       value: '109.74.192.161'
@@ -62,6 +72,8 @@
       command: "create"
       zone: "camlarp.co.uk"
       record: "refs.bw.camlarp.co.uk."
+      aws_access_key: '{{aqcom_aws_key}}'
+      aws_secret_key: '{{aqcom_aws_secret}}'
       type: "A"
       ttl: "300"
       value: '109.74.192.161'
@@ -74,6 +86,8 @@
       command: "create"
       zone: "camlarp.co.uk"
       record: "nfnc.camlarp.co.uk."
+      aws_access_key: '{{aqcom_aws_key}}'
+      aws_secret_key: '{{aqcom_aws_secret}}'
       type: "A"
       ttl: "300"
       value: '109.74.192.161'
@@ -86,6 +100,8 @@
       command: "create"
       zone: "camlarp.co.uk"
       record: "refs.nfnc.camlarp.co.uk."
+      aws_access_key: '{{aqcom_aws_key}}'
+      aws_secret_key: '{{aqcom_aws_secret}}'
       type: "A"
       ttl: "300"
       value: '109.74.192.161'
@@ -98,6 +114,8 @@
       command: "create"
       zone: "camlarp.co.uk"
       record: "wiki.camlarp.co.uk."
+      aws_access_key: '{{aqcom_aws_key}}'
+      aws_secret_key: '{{aqcom_aws_secret}}'
       type: "A"
       ttl: "300"
       value: '109.74.192.161'
@@ -110,6 +128,8 @@
       command: "create"
       zone: "camlarp.co.uk"
       record: "www.camlarp.co.uk."
+      aws_access_key: '{{aqcom_aws_key}}'
+      aws_secret_key: '{{aqcom_aws_secret}}'
       type: "A"
       ttl: "300"
       value: '109.74.192.161'
