--- a/ansible/roles/aws-aqcom-dns/tasks/cleartext.yml
+++ b/ansible/roles/aws-aqcom-dns/tasks/cleartext.yml
@@ -6,6 +6,8 @@
       command: "create"
       zone: "cleartextcontent.co.uk"
       record: "cleartextcontent.co.uk."
+      aws_access_key: '{{aqcom_aws_key}}'
+      aws_secret_key: '{{aqcom_aws_secret}}'
       type: "A"
       ttl: "300"
       value: '{{ ansible_default_ipv4.address }}'
@@ -16,6 +18,8 @@
       command: "create"
       zone: "cleartextcontent.co.uk"
       record: "cleartextcontent.co.uk."
+      aws_access_key: '{{aqcom_aws_key}}'
+      aws_secret_key: '{{aqcom_aws_secret}}'
       type: "MX"
       ttl: "300"
       value: '10 cenote.gkhs.net'
@@ -26,6 +30,8 @@
       command: "create"
       zone: "cleartextcontent.co.uk"
       record: "cleartextcontent.co.uk."
+      aws_access_key: '{{aqcom_aws_key}}'
+      aws_secret_key: '{{aqcom_aws_secret}}'
       type: "NS"
       ttl: "172800"
       value: ns-797.awsdns-35.net., ns-39.awsdns-04.com., ns-2024.awsdns-61.co.uk., ns-1219.awsdns-24.org.
@@ -38,7 +44,9 @@
 #      command: "create"
 #      zone: "cleartextcontent.co.uk"
 #      record: "cleartextcontent.co.uk."
-#      type: "SOA"
+#      aws_access_key: '{{aqcom_aws_key}}'
+      aws_secret_key: '{{aqcom_aws_secret}}'
+      type: "SOA"
 #      ttl: "900"
 #      value: 'ns-797.awsdns-35.net. awsdns-hostmaster.amazon.com. 1 7200 900 1209600 86400'
 
@@ -50,6 +58,8 @@
       command: "create"
       zone: "cleartextcontent.co.uk"
       record: "www.cleartextcontent.co.uk."
+      aws_access_key: '{{aqcom_aws_key}}'
+      aws_secret_key: '{{aqcom_aws_secret}}'
       type: "A"
       ttl: "300"
       value: '{{ ansible_default_ipv4.address }}'
