--- a/ansible/roles/aws-aqcom-dns/tasks/factionfiction.yml
+++ b/ansible/roles/aws-aqcom-dns/tasks/factionfiction.yml
@@ -6,6 +6,8 @@
       command: "create"
       zone: "factionfiction.net"
       record: "factionfiction.net."
+      aws_access_key: '{{aqcom_aws_key}}'
+      aws_secret_key: '{{aqcom_aws_secret}}'
       type: "A"
       ttl: "300"
       value: '{{ ansible_default_ipv4.address }}'
@@ -18,6 +20,8 @@
       command: "create"
       zone: "factionfiction.net"
       record: "factionfiction.net."
+      aws_access_key: '{{aqcom_aws_key}}'
+      aws_secret_key: '{{aqcom_aws_secret}}'
       type: "NS"
       ttl: "172800"
       value: ns-1302.awsdns-34.org., ns-1969.awsdns-54.co.uk., ns-147.awsdns-18.com., ns-614.awsdns-12.net.
@@ -30,7 +34,9 @@
 #      command: "create"
 #      zone: "factionfiction.net"
 #      record: "factionfiction.net."
-#      type: "SOA"
+#      aws_access_key: '{{aqcom_aws_key}}'
+      aws_secret_key: '{{aqcom_aws_secret}}'
+      type: "SOA"
 #      ttl: "900"
 #      value: 'ns-1302.awsdns-34.org. awsdns-hostmaster.amazon.com. 1 7200 900 1209600 86400'
 
@@ -42,6 +48,8 @@
       command: "create"
       zone: "factionfiction.net"
       record: "www.factionfiction.net."
+      aws_access_key: '{{aqcom_aws_key}}'
+      aws_secret_key: '{{aqcom_aws_secret}}'
       type: "CNAME"
       ttl: "300"
       value: 'factionfiction.net'
