--- a/ansible/roles/aws-aqcom-dns/tasks/ludoistic.yml
+++ b/ansible/roles/aws-aqcom-dns/tasks/ludoistic.yml
@@ -12,7 +12,8 @@
       type: "A"
       ttl: "300"
       value: '{{ ansible_default_ipv4.address }}'
-      profile: 'istic-r53'
+      aws_access_key: '{{istic_aws_key}}'
+      aws_secret_key: '{{istic_aws_secret}}'
 
 
 
@@ -25,7 +26,8 @@
       type: "NS"
       ttl: "172800"
       value: ns-1761.awsdns-28.co.uk., ns-333.awsdns-41.com., ns-957.awsdns-55.net., ns-1058.awsdns-04.org.
-      profile: 'istic-r53'
+      aws_access_key: '{{istic_aws_key}}'
+      aws_secret_key: '{{istic_aws_secret}}'
 
 #- name: ludoistic.com. - SOA
 #  route53:
@@ -48,7 +50,8 @@
       type: "CNAME"
       ttl: "300"
       value: 'ludoistic.com'
-      profile: 'istic-r53'
+      aws_access_key: '{{istic_aws_key}}'
+      aws_secret_key: '{{istic_aws_secret}}'
 
 
 # - name: google._domainkey.ludoistic.com. - TXT
