--- a/ansible/roles/aws-aqcom-dns/tasks/warehouse.yml
+++ b/ansible/roles/aws-aqcom-dns/tasks/warehouse.yml
@@ -6,6 +6,8 @@
       command: "create"
       zone: "warehousebasement.com"
       record: "warehousebasement.com."
+      aws_access_key: '{{aqcom_aws_key}}'
+      aws_secret_key: '{{aqcom_aws_secret}}'
       type: "A"
       ttl: "300"
       value: '138.201.60.152'
@@ -18,6 +20,8 @@
       command: "create"
       zone: "warehousebasement.com"
       record: "warehousebasement.com."
+      aws_access_key: '{{aqcom_aws_key}}'
+      aws_secret_key: '{{aqcom_aws_secret}}'
       type: "NS"
       ttl: "172800"
       value: ns-983.awsdns-58.net., ns-1661.awsdns-15.co.uk., ns-1161.awsdns-17.org., ns-271.awsdns-33.com.
@@ -30,7 +34,9 @@
 #      command: "create"
 #      zone: "warehousebasement.com"
 #      record: "warehousebasement.com."
-#      type: "SOA"
+#      aws_access_key: '{{aqcom_aws_key}}'
+      aws_secret_key: '{{aqcom_aws_secret}}'
+      type: "SOA"
 #      ttl: "900"
 #      value: 'ns-983.awsdns-58.net. awsdns-hostmaster.amazon.com. 1 7200 900 1209600 86400'
 
@@ -42,6 +48,8 @@
       command: "create"
       zone: "warehousebasement.com"
       record: "www.warehousebasement.com."
+      aws_access_key: '{{aqcom_aws_key}}'
+      aws_secret_key: '{{aqcom_aws_secret}}'
       type: "CNAME"
       ttl: "300"
       value: 'warehousebasement.com'
