libssl isn't drift compatible with new ubuntu

--- a/ansible/roles/water-gkhs-packages/tasks/main.yml
+++ b/ansible/roles/water-gkhs-packages/tasks/main.yml
@@ -15,7 +15,7 @@
     - python-pip
     - build-essential
     - libffi-dev
-    - libssl-dev
+      #- libssl-dev
     - apt-transport-https
     - ca-certificates
     - etckeeper
