--- a/ansible/requirements.yml
+++ b/ansible/requirements.yml
@@ -9,3 +9,4 @@
 - src: azavea.papertrail
 #- src: charleskorn.raspi-information-radiator
 - src: https://github.com/ieguiguren/ansible-nordvpn
+- src: https://github.com/amarao/ansible-get-external-ip-via-dyndns
