--- a/ansible/roles/millpond-packages/tasks/main.yml
+++ b/ansible/roles/millpond-packages/tasks/main.yml
@@ -1,7 +1,7 @@
 ---
 
 - name: Remove some packages
-  apt: pkg={{ item }} state=removed
+  apt: pkg={{ item }} state=absent
   with_items:
     - nginx-full
 
