--- a/ansible/roles/aws-aqcom-dns/tasks/warehouse.yml
+++ b/ansible/roles/aws-aqcom-dns/tasks/warehouse.yml
@@ -35,8 +35,8 @@
 #      zone: "warehousebasement.com"
 #      record: "warehousebasement.com."
 #      aws_access_key: '{{aqcom_aws_key}}'
-      aws_secret_key: '{{aqcom_aws_secret}}'
-      type: "SOA"
+#      aws_secret_key: '{{aqcom_aws_secret}}'
+#      type: "SOA"
 #      ttl: "900"
 #      value: 'ns-983.awsdns-58.net. awsdns-hostmaster.amazon.com. 1 7200 900 1209600 86400'
 
