--- a/ansible/roles/aws-pdforums/tasks/iam.yml
+++ b/ansible/roles/aws-pdforums/tasks/iam.yml
@@ -5,12 +5,27 @@
     state: present
   with_items:
     - pdforums-discourse
+  tags:
+    - pdforums-discourse
 
 
 - name: Attach all-access S3 policy to discourse user
   iam_policy:
     iam_type: user
     iam_name: "pdforums-discourse"
-    policy_name: discourse-bucket-access
+    policy_name: discourse-upload-access
     state: present
     policy_json: "{{ lookup( 'file', 'discourse-bucket-access.json') }}"
+  tags:
+    - pdforums-discourse
+
+
+- name: Attach all-access S3 policy to discourse user
+  iam_policy:
+    iam_type: user
+    iam_name: "pdforums-discourse"
+    policy_name: discourse-backups-access
+    state: present
+    policy_json: "{{ lookup( 'file', 'discourse-backups-access.json') }}"
+  tags:
+    - pdforums-discourse
