--- a/ansible/roles/archipelago-nginx/tasks/main.yml
+++ b/ansible/roles/archipelago-nginx/tasks/main.yml
@@ -32,6 +32,7 @@
     add_www:
     - aquarionics.com
     - cleartextcontent.co.uk
+    - carcosadreams.co.uk
     remove_www:
     - ludoistic.com
     - omnyom.com
